@@ -14,62 +14,66 @@ import static io.camunda.connector.agenticai.aiagent.TestMessagesFixture.systemM
 import static io.camunda.connector.agenticai.aiagent.TestMessagesFixture.toolCallResultMessage;
 import static io.camunda.connector.agenticai.aiagent.TestMessagesFixture.userMessage;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doAnswer;
+import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
+import io.camunda.client.api.command.AgentInstanceUpdateStatus;
 import io.camunda.connector.agenticai.aiagent.AiAgentJobWorker;
-import io.camunda.connector.agenticai.aiagent.agent.AgentInitializationResult.AgentContextInitializationResult;
-import io.camunda.connector.agenticai.aiagent.agent.AgentInitializationResult.AgentResponseInitializationResult;
+import io.camunda.connector.agenticai.aiagent.agent.AgentInitializationResult.DeferConversation;
+import io.camunda.connector.agenticai.aiagent.agent.AgentInitializationResult.DiscoverTools;
+import io.camunda.connector.agenticai.aiagent.agent.AgentInitializationResult.ReadyToConverse;
+import io.camunda.connector.agenticai.aiagent.agentinstance.AgentInstanceClient;
+import io.camunda.connector.agenticai.aiagent.agentinstance.AgentInstanceUpdateRequest;
 import io.camunda.connector.agenticai.aiagent.framework.AiFrameworkAdapter;
 import io.camunda.connector.agenticai.aiagent.framework.AiFrameworkChatResponse;
+import io.camunda.connector.agenticai.aiagent.memory.ConversationSnapshot;
 import io.camunda.connector.agenticai.aiagent.memory.conversation.ConversationStore;
 import io.camunda.connector.agenticai.aiagent.memory.conversation.ConversationStoreRegistry;
 import io.camunda.connector.agenticai.aiagent.memory.conversation.inprocess.InProcessConversationContext;
 import io.camunda.connector.agenticai.aiagent.memory.conversation.inprocess.InProcessConversationStore;
-import io.camunda.connector.agenticai.aiagent.memory.runtime.RuntimeMemory;
+import io.camunda.connector.agenticai.aiagent.model.AgentConfiguration;
 import io.camunda.connector.agenticai.aiagent.model.AgentContext;
+import io.camunda.connector.agenticai.aiagent.model.AgentConversation;
+import io.camunda.connector.agenticai.aiagent.model.AgentConversationTurn;
 import io.camunda.connector.agenticai.aiagent.model.AgentMetrics;
 import io.camunda.connector.agenticai.aiagent.model.AgentMetrics.TokenUsage;
 import io.camunda.connector.agenticai.aiagent.model.AgentResponse;
 import io.camunda.connector.agenticai.aiagent.model.AgentState;
 import io.camunda.connector.agenticai.aiagent.model.JobWorkerAgentExecutionContext;
-import io.camunda.connector.agenticai.aiagent.model.request.MemoryConfiguration;
-import io.camunda.connector.agenticai.aiagent.model.request.MemoryStorageConfiguration.InProcessMemoryStorageConfiguration;
+import io.camunda.connector.agenticai.aiagent.model.message.AssistantMessage;
+import io.camunda.connector.agenticai.aiagent.model.message.Message;
+import io.camunda.connector.agenticai.aiagent.model.message.content.TextContent;
+import io.camunda.connector.agenticai.aiagent.model.request.LimitsConfiguration;
 import io.camunda.connector.agenticai.aiagent.model.request.PromptConfiguration;
-import io.camunda.connector.agenticai.aiagent.model.request.PromptConfiguration.SystemPromptConfiguration;
 import io.camunda.connector.agenticai.aiagent.model.request.PromptConfiguration.UserPromptConfiguration;
-import io.camunda.connector.agenticai.aiagent.tool.GatewayToolHandlerRegistry;
-import io.camunda.connector.agenticai.model.message.AssistantMessage;
-import io.camunda.connector.agenticai.model.message.Message;
-import io.camunda.connector.agenticai.model.tool.ToolCall;
-import io.camunda.connector.agenticai.model.tool.ToolCallProcessVariable;
-import io.camunda.connector.agenticai.model.tool.ToolCallResult;
+import io.camunda.connector.agenticai.aiagent.model.request.provider.OpenAiProviderConfiguration;
+import io.camunda.connector.agenticai.aiagent.model.tool.ToolCall;
+import io.camunda.connector.agenticai.aiagent.model.tool.ToolCallProcessVariable;
+import io.camunda.connector.agenticai.aiagent.model.tool.ToolCallResult;
+import io.camunda.connector.agenticai.aiagent.systemprompt.SystemPromptComposer;
+import io.camunda.connector.api.error.ConnectorException;
+import io.camunda.connector.api.outbound.JobCompletionFailure;
+import java.time.Duration;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Answers;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
@@ -78,99 +82,154 @@ class JobWorkerAgentRequestHandlerTest {
   private static final AgentContext INITIAL_AGENT_CONTEXT =
       AgentContext.builder().state(AgentState.READY).toolDefinitions(TOOL_DEFINITIONS).build();
 
-  private static final PromptConfiguration.SystemPromptConfiguration SYSTEM_PROMPT_CONFIGURATION =
-      new PromptConfiguration.SystemPromptConfiguration("You are a helpful assistant. Be nice.");
-  private static final PromptConfiguration.UserPromptConfiguration
-      USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS =
-          new PromptConfiguration.UserPromptConfiguration("Write a haiku about the sea", List.of());
-  private static final PromptConfiguration.UserPromptConfiguration
-      USER_PROMPT_CONFIGURATION_WITH_TOOLS =
-          new PromptConfiguration.UserPromptConfiguration(
-              "What is the weather in Munich?", List.of());
+  private static final String SYSTEM_PROMPT = "You are a helpful assistant. Be nice.";
+  private static final Message SYSTEM_MESSAGE = systemMessage(SYSTEM_PROMPT);
+  private static final Message USER_MESSAGE = userMessage("Write a haiku about the sea");
+  private static final Duration EXECUTION_TIME = Duration.ofMillis(123);
 
   @Mock private AgentInitializer agentInitializer;
   @Mock private ConversationStoreRegistry conversationStoreRegistry;
-  @Mock private AgentLimitsValidator limitsValidator;
-  @Mock private AgentMessagesHandler messagesHandler;
-  @Mock private GatewayToolHandlerRegistry gatewayToolHandlers;
+  @Mock private AgentConversationTurnInputComposer agentInputComposer;
   @Mock private AiFrameworkAdapter<?> framework;
+  @Mock private SystemPromptComposer systemPromptComposer;
   @Mock private AgentResponseHandler responseHandler;
-
-  private ConversationStore conversationStore;
+  @Mock private AgentInstanceClient agentInstanceClient;
 
   @Mock(answer = Answers.RETURNS_DEEP_STUBS)
   private JobWorkerAgentExecutionContext agentExecutionContext;
 
-  @Captor private ArgumentCaptor<RuntimeMemory> runtimeMemoryCaptor;
+  @Captor private ArgumentCaptor<ConversationSnapshot> snapshotCaptor;
+  @Captor private ArgumentCaptor<AgentConversationTurn> turnCaptor;
 
   @InjectMocks private JobWorkerAgentRequestHandler requestHandler;
 
   @BeforeEach
   void setUp() {
-    conversationStore = spy(new InProcessConversationStore());
+    ConversationStore conversationStore = spy(new InProcessConversationStore());
     doReturn(conversationStore)
         .when(conversationStoreRegistry)
         .getConversationStore(eq(agentExecutionContext), any(AgentContext.class));
+    // configuration() returns a record that cannot be deep-stubbed; provide an explicit default
+    lenient()
+        .doReturn(
+            new AgentConfiguration(
+                new OpenAiProviderConfiguration(null),
+                new PromptConfiguration.SystemPromptConfiguration(null),
+                new PromptConfiguration.UserPromptConfiguration("user prompt", List.of()),
+                null,
+                null,
+                null,
+                null))
+        .when(agentExecutionContext)
+        .configuration();
+    // avoid deep-stubbing a mock UserPromptConfiguration (these tests drive the turn via the
+    // composer mock and don't rely on the user prompt)
+    lenient().doReturn(null).when(agentExecutionContext).userPrompt();
   }
 
   @Test
-  void directlyReturnsAgentResponseWhenInitializationReturnsResponse() {
-    Mockito.reset(conversationStoreRegistry);
+  void dispatchesToolDiscoveryWhenInitializationReturnsDiscoverTools() {
+    reset(conversationStoreRegistry);
 
-    final var agentResponse =
-        AgentResponse.builder()
-            .context(AgentContext.builder().state(AgentState.TOOL_DISCOVERY).build())
-            .toolCalls(
-                List.of(
-                    ToolCallProcessVariable.from(
-                        ToolCall.builder().id("tool_discovery").name("AGatewayTool").build())))
-            .build();
+    final var toolDiscoveryToolCalls =
+        List.of(ToolCall.builder().id("tool_discovery").name("AGatewayTool").build());
+    final var discoveryAgentContext =
+        AgentContext.builder().state(AgentState.TOOL_DISCOVERY).build();
 
     when(agentInitializer.initializeAgent(agentExecutionContext))
-        .thenReturn(new AgentResponseInitializationResult(agentResponse));
+        .thenReturn(new DiscoverTools(discoveryAgentContext, toolDiscoveryToolCalls));
 
     final var response = requestHandler.handleRequest(agentExecutionContext);
     assertThat(response.variables()).containsOnlyKeys("agentContext", "toolCallResults");
     assertThat(response.completionConditionFulfilled()).isFalse();
     assertThat(response.cancelRemainingInstances()).isFalse();
-    assertThat(response.responseValue()).isNotNull().isEqualTo(agentResponse);
+    assertThat(response.responseValue()).isNotNull();
+    assertThat(response.responseValue().context()).isEqualTo(discoveryAgentContext);
+    assertThat(response.responseValue().toolCalls())
+        .containsExactly(ToolCallProcessVariable.from(toolDiscoveryToolCalls.getFirst()));
 
-    verifyNoInteractions(
-        limitsValidator, messagesHandler, gatewayToolHandlers, framework, responseHandler);
+    verifyNoInteractions(agentInputComposer, framework, responseHandler);
+  }
+
+  @Test
+  void toolDiscoveryListenerPatchesStatusOnJobCompletion() {
+    reset(conversationStoreRegistry);
+
+    final var toolDiscoveryToolCalls =
+        List.of(ToolCall.builder().id("tool_discovery").name("AGatewayTool").build());
+    final var discoveryAgentContext =
+        AgentContext.builder().state(AgentState.TOOL_DISCOVERY).build();
+
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new DiscoverTools(discoveryAgentContext, toolDiscoveryToolCalls));
+
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+
+    // no agentInstanceClient calls during handleRequest itself
+    verifyNoInteractions(agentInstanceClient);
+
+    // when: job completes — TOOL_DISCOVERY status patch fires
+    response.onJobCompleted();
+    verify(agentInstanceClient)
+        .update(
+            eq(agentExecutionContext),
+            isNull(),
+            eq(AgentInstanceUpdateRequest.statusOnly(AgentInstanceUpdateStatus.TOOL_DISCOVERY)));
+    verifyNoMoreInteractions(agentInstanceClient);
+  }
+
+  @Test
+  void toolDiscoveryListenerSkipsStatusPatchOnJobCompletionFailure() {
+    reset(conversationStoreRegistry);
+
+    final var toolDiscoveryToolCalls =
+        List.of(ToolCall.builder().id("tool_discovery").name("AGatewayTool").build());
+    final var discoveryAgentContext =
+        AgentContext.builder().state(AgentState.TOOL_DISCOVERY).build();
+
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new DiscoverTools(discoveryAgentContext, toolDiscoveryToolCalls));
+
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+
+    verifyNoInteractions(agentInstanceClient);
+
+    // when: job completion fails — listener logs and does nothing
+    response.onJobCompletionFailed(
+        new JobCompletionFailure.ExecutionFailed(new RuntimeException(), null));
+    verifyNoInteractions(agentInstanceClient);
+  }
+
+  @Test
+  void returnsNoOpResponseWhenInitializationReturnsDeferConversation() {
+    reset(conversationStoreRegistry);
+
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new DeferConversation());
+
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+    assertThat(response.responseValue()).isNull();
+    assertThat(response.completionConditionFulfilled()).isFalse();
+
+    verifyNoInteractions(agentInputComposer, framework, responseHandler);
   }
 
   @Test
   void orchestratesRequestExecutionWithoutToolCalls() {
-    mockSystemPrompt(SYSTEM_PROMPT_CONFIGURATION);
-    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS, List.of());
+    mockSystemPrompt();
+    mockProceed(USER_MESSAGE);
 
     when(agentInitializer.initializeAgent(agentExecutionContext))
-        .thenReturn(new AgentContextInitializationResult(INITIAL_AGENT_CONTEXT, List.of()));
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
 
     final var assistantMessageText =
         "Endless waves whisper | moonlight dances on the tide | secrets drift below.";
     final var assistantMessage = assistantMessage(assistantMessageText);
-
-    final var expectedMessages =
-        List.of(
-            systemMessage(SYSTEM_PROMPT_CONFIGURATION.prompt()),
-            userMessage(USER_PROMPT_CONFIGURATION_WITHOUT_TOOLS.prompt()),
-            assistantMessage);
-
     mockFrameworkExecution(assistantMessage);
 
-    when(gatewayToolHandlers.transformToolCalls(any(AgentContext.class), anyList()))
-        .thenAnswer(i -> i.getArgument(1));
-    when(responseHandler.createResponse(
-            eq(agentExecutionContext), any(AgentContext.class), eq(assistantMessage), anyList()))
-        .thenAnswer(
-            i ->
-                AgentResponse.builder()
-                    .context(i.getArgument(1, AgentContext.class))
-                    .responseMessage(i.getArgument(2, AssistantMessage.class))
-                    .responseText(assistantMessageText)
-                    .toolCalls(i.getArgument(3))
-                    .build());
+    final var expectedStoredMessages = List.of(SYSTEM_MESSAGE, USER_MESSAGE, assistantMessage);
+
+    mockResponseHandler();
 
     final var response = requestHandler.handleRequest(agentExecutionContext);
     assertThat(response.variables()).containsOnlyKeys("agentContext", "agent");
@@ -182,62 +241,36 @@ class JobWorkerAgentRequestHandlerTest {
     assertThat(agentResponse.context()).isEqualTo(response.variables().get("agentContext"));
     assertThat(agentResponse.context().state()).isEqualTo(AgentState.READY);
     assertThat(agentResponse.context().metrics())
-        .isEqualTo(new AgentMetrics(1, new TokenUsage(10, 20)));
+        .isEqualTo(new AgentMetrics(1, new TokenUsage(10, 20), 0));
     assertThat(agentResponse.context().conversation())
         .isNotNull()
         .isInstanceOfSatisfying(
             InProcessConversationContext.class,
-            c -> assertThat(c.messages()).containsExactlyElementsOf(expectedMessages));
+            c -> assertThat(c.messages()).containsExactlyElementsOf(expectedStoredMessages));
 
     assertThat(agentResponse.responseMessage()).isEqualTo(assistantMessage);
     assertThat(agentResponse.responseText()).isEqualTo(assistantMessageText);
     assertThat(agentResponse.toolCalls()).isEmpty();
     assertThat(response.elementActivations()).isEmpty();
 
-    assertThat(runtimeMemoryCaptor.getValue().allMessages())
-        .containsExactlyElementsOf(expectedMessages);
-
-    verify(limitsValidator).validateConfiguredLimits(agentExecutionContext, INITIAL_AGENT_CONTEXT);
-    verify(agentExecutionContext, never()).setCancelRemainingInstances(anyBoolean());
+    // snapshot is captured before the assistant message is ingested
+    assertThat(snapshotCaptor.getValue().messages()).containsExactly(SYSTEM_MESSAGE, USER_MESSAGE);
   }
 
   @Test
   void orchestratesRequestExecutionWithToolCalls() {
-    mockSystemPrompt(SYSTEM_PROMPT_CONFIGURATION);
-    mockUserPrompt(USER_PROMPT_CONFIGURATION_WITH_TOOLS, List.of());
+    mockSystemPrompt();
+    mockProceed(USER_MESSAGE);
 
     when(agentInitializer.initializeAgent(agentExecutionContext))
-        .thenReturn(new AgentContextInitializationResult(INITIAL_AGENT_CONTEXT, List.of()));
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
 
     final var assistantMessage = AssistantMessage.builder().toolCalls(TOOL_CALLS).build();
-
-    final var expectedMessages =
-        List.of(
-            systemMessage(SYSTEM_PROMPT_CONFIGURATION.prompt()),
-            userMessage(USER_PROMPT_CONFIGURATION_WITH_TOOLS.prompt()),
-            assistantMessage);
-
     mockFrameworkExecution(assistantMessage);
 
-    final Function<ToolCall, ToolCall> toolCallTransformer =
-        toolCall -> toolCall.withId(toolCall.id() + "_transformed");
+    final var expectedStoredMessages = List.of(SYSTEM_MESSAGE, USER_MESSAGE, assistantMessage);
 
-    when(gatewayToolHandlers.transformToolCalls(any(AgentContext.class), anyList()))
-        .thenAnswer(
-            i -> {
-              List<ToolCall> toolCalls = i.getArgument(1);
-              return toolCalls.stream().map(toolCallTransformer).toList();
-            });
-
-    when(responseHandler.createResponse(
-            eq(agentExecutionContext), any(AgentContext.class), eq(assistantMessage), anyList()))
-        .thenAnswer(
-            i ->
-                AgentResponse.builder()
-                    .context(i.getArgument(1, AgentContext.class))
-                    .responseMessage(i.getArgument(2, AssistantMessage.class))
-                    .toolCalls(i.getArgument(3))
-                    .build());
+    mockResponseHandler();
 
     final var response = requestHandler.handleRequest(agentExecutionContext);
     assertThat(response.variables()).containsOnlyKeys("agentContext", "toolCallResults");
@@ -248,23 +281,19 @@ class JobWorkerAgentRequestHandlerTest {
     assertThat(agentResponse).isNotNull();
     assertThat(agentResponse.context().state()).isEqualTo(AgentState.READY);
     assertThat(agentResponse.context().metrics())
-        .isEqualTo(new AgentMetrics(1, new TokenUsage(10, 20)));
+        .isEqualTo(new AgentMetrics(1, new TokenUsage(10, 20), 2));
     assertThat(agentResponse.context().conversation())
         .isNotNull()
         .isInstanceOfSatisfying(
             InProcessConversationContext.class,
-            c -> assertThat(c.messages()).containsExactlyElementsOf(expectedMessages));
+            c -> assertThat(c.messages()).containsExactlyElementsOf(expectedStoredMessages));
 
     assertThat(agentResponse.responseMessage()).isEqualTo(assistantMessage);
     assertThat(agentResponse.responseText()).isNull();
     assertThat(agentResponse.toolCalls())
         .containsExactly(
-            new ToolCallProcessVariable(
-                new ToolCallProcessVariable.ToolCallMetadata("abcdef_transformed", "getWeather"),
-                Map.of("location", "MUC")),
-            new ToolCallProcessVariable(
-                new ToolCallProcessVariable.ToolCallMetadata("fedcba_transformed", "getDateTime"),
-                Map.of()));
+            ToolCallProcessVariable.from(TOOL_CALLS.get(0)),
+            ToolCallProcessVariable.from(TOOL_CALLS.get(1)));
 
     assertThat(response.elementActivations()).hasSize(2);
     assertThat(response.elementActivations().get(0).elementId()).isEqualTo("getWeather");
@@ -283,57 +312,30 @@ class JobWorkerAgentRequestHandlerTest {
                 agentResponse.toolCalls().get(1),
                 AiAgentJobWorker.TOOL_CALL_RESULT_VARIABLE,
                 ""));
-
-    assertThat(runtimeMemoryCaptor.getValue().allMessages())
-        .containsExactlyElementsOf(expectedMessages);
-
-    verify(limitsValidator).validateConfiguredLimits(agentExecutionContext, INITIAL_AGENT_CONTEXT);
-    verify(agentExecutionContext, never()).setCancelRemainingInstances(anyBoolean());
   }
 
   @Test
   void orchestratesRequestExecutionWithInterruptedToolCall() {
-    List<ToolCallResult> toolCallResults = List.of(TOOL_CALL_RESULTS.get(0));
-    mockSystemPrompt(SYSTEM_PROMPT_CONFIGURATION);
-    mockInterruptedToolCall(toolCallResults);
+    List<ToolCallResult> toolCallResults = List.of(TOOL_CALL_RESULTS.getFirst());
+    mockSystemPrompt();
+
+    final var interruptedMessage =
+        toolCallResultMessage(
+            toolCallResults.stream()
+                .map(tc -> ToolCallResult.forCancelledToolCall(tc.id(), tc.name()))
+                .toList());
+    mockProceed(interruptedMessage);
 
     when(agentInitializer.initializeAgent(agentExecutionContext))
-        .thenReturn(new AgentContextInitializationResult(INITIAL_AGENT_CONTEXT, List.of()));
-
-    when(agentExecutionContext.cancelRemainingInstances()).thenReturn(true);
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
 
     final var assistantMessage = AssistantMessage.builder().build();
-
-    final var expectedMessages =
-        List.of(
-            systemMessage(SYSTEM_PROMPT_CONFIGURATION.prompt()),
-            toolCallResultMessage(
-                toolCallResults.stream()
-                    .map(tc -> ToolCallResult.forCancelledToolCall(tc.id(), tc.name()))
-                    .toList()),
-            assistantMessage);
-
     mockFrameworkExecution(assistantMessage);
 
-    final Function<ToolCall, ToolCall> toolCallTransformer =
-        toolCall -> toolCall.withId(toolCall.id() + "_transformed");
+    final var expectedStoredMessages =
+        List.of(SYSTEM_MESSAGE, interruptedMessage, assistantMessage);
 
-    when(gatewayToolHandlers.transformToolCalls(any(AgentContext.class), anyList()))
-        .thenAnswer(
-            i -> {
-              List<ToolCall> toolCalls = i.getArgument(1);
-              return toolCalls.stream().map(toolCallTransformer).toList();
-            });
-
-    when(responseHandler.createResponse(
-            eq(agentExecutionContext), any(AgentContext.class), eq(assistantMessage), anyList()))
-        .thenAnswer(
-            i ->
-                AgentResponse.builder()
-                    .context(i.getArgument(1, AgentContext.class))
-                    .responseMessage(i.getArgument(2, AssistantMessage.class))
-                    .toolCalls(i.getArgument(3))
-                    .build());
+    mockResponseHandler();
 
     final var response = requestHandler.handleRequest(agentExecutionContext);
     assertThat(response.variables()).containsOnlyKeys("agentContext", "agent");
@@ -345,78 +347,25 @@ class JobWorkerAgentRequestHandlerTest {
     assertThat(agentResponse.context()).isEqualTo(response.variables().get("agentContext"));
     assertThat(agentResponse.context().state()).isEqualTo(AgentState.READY);
     assertThat(agentResponse.context().metrics())
-        .isEqualTo(new AgentMetrics(1, new TokenUsage(10, 20)));
+        .isEqualTo(new AgentMetrics(1, new TokenUsage(10, 20), 0));
     assertThat(agentResponse.context().conversation())
         .isNotNull()
         .isInstanceOfSatisfying(
             InProcessConversationContext.class,
-            c -> assertThat(c.messages()).containsExactlyElementsOf(expectedMessages));
+            c -> assertThat(c.messages()).containsExactlyElementsOf(expectedStoredMessages));
 
     assertThat(agentResponse.responseMessage()).isEqualTo(assistantMessage);
     assertThat(agentResponse.responseText()).isNull();
     assertThat(agentResponse.toolCalls()).isEmpty();
     assertThat(response.elementActivations()).isEmpty();
-
-    assertThat(runtimeMemoryCaptor.getValue().allMessages())
-        .containsExactlyElementsOf(expectedMessages);
-
-    verify(limitsValidator).validateConfiguredLimits(agentExecutionContext, INITIAL_AGENT_CONTEXT);
-    verify(agentExecutionContext).setCancelRemainingInstances(true);
   }
 
   @Test
-  void usesConfiguredMaxMessagesWhenMessagesExceedContextWindow() {
-    final var runtimeMemory =
-        setupRuntimeMemorySizeTest(
-            new MemoryConfiguration(new InProcessMemoryStorageConfiguration(), 11));
-
-    assertThat(runtimeMemory.allMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages()).hasSize(11);
-
-    assertThat(runtimeMemory.filteredMessages().getFirst())
-        .isEqualTo(userMessage("User message 20"));
-    assertThat(runtimeMemory.filteredMessages().getLast())
-        .isEqualTo(assistantMessage("This is the assistant message"));
-  }
-
-  @ParameterizedTest
-  @MethodSource("memoryConfigurationsWithoutMaxMessages")
-  void fallsBackToDefaultContextWindowSizeWhenMemoryConfigurationIsMissing(
-      MemoryConfiguration memoryConfiguration) {
-    final var runtimeMemory = setupRuntimeMemorySizeTest(memoryConfiguration);
-
-    assertThat(runtimeMemory.allMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages()).hasSize(20);
-
-    assertThat(runtimeMemory.filteredMessages().getFirst())
-        .isEqualTo(userMessage("User message 11"));
-    assertThat(runtimeMemory.filteredMessages().getLast())
-        .isEqualTo(assistantMessage("This is the assistant message"));
-  }
-
-  @Test
-  void usesAllMessagesWhenMessagesWithinContextWindow() {
-    final var runtimeMemory =
-        setupRuntimeMemorySizeTest(
-            new MemoryConfiguration(new InProcessMemoryStorageConfiguration(), 35));
-
-    assertThat(runtimeMemory.allMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages()).hasSize(31);
-    assertThat(runtimeMemory.filteredMessages())
-        .containsExactlyElementsOf(runtimeMemory.allMessages());
-
-    assertThat(runtimeMemory.filteredMessages().getFirst())
-        .isEqualTo(userMessage("User message 0"));
-    assertThat(runtimeMemory.filteredMessages().getLast())
-        .isEqualTo(assistantMessage("This is the assistant message"));
-  }
-
-  @Test
-  void silentlyCompletesJobWhenNoUserMessageContent() {
-    mockSystemPrompt(SYSTEM_PROMPT_CONFIGURATION);
-
+  void silentlyCompletesJobWhenInputComposerReturnsNoOp() {
     when(agentInitializer.initializeAgent(agentExecutionContext))
-        .thenReturn(new AgentContextInitializationResult(INITIAL_AGENT_CONTEXT, List.of()));
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
+    when(agentInputComposer.compose(any(), any(), any(), any()))
+        .thenReturn(new CompositionResult.Deferred());
 
     final var response = requestHandler.handleRequest(agentExecutionContext);
     assertThat(response.variables()).isEmpty();
@@ -427,116 +376,325 @@ class JobWorkerAgentRequestHandlerTest {
     verifyNoInteractions(framework);
   }
 
-  private RuntimeMemory setupRuntimeMemorySizeTest(MemoryConfiguration memoryConfiguration) {
-    mockUserPrompt(new UserPromptConfiguration("User message 30", List.of()), List.of());
-
-    when(agentExecutionContext.memory()).thenReturn(memoryConfiguration);
-
-    final List<Message> previousMessages =
-        IntStream.range(0, 29)
-            .mapToObj(i -> userMessage("User message " + i))
-            .collect(Collectors.toUnmodifiableList());
-
-    final var initialAgentContext =
-        INITIAL_AGENT_CONTEXT.withConversation(
-            InProcessConversationContext.builder("in-process").messages(previousMessages).build());
-
+  @Test
+  void silentlyCompletesJobWhenInputComposerReturnsNoInput() {
     when(agentInitializer.initializeAgent(agentExecutionContext))
-        .thenReturn(new AgentContextInitializationResult(initialAgentContext, List.of()));
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
+    when(agentInputComposer.compose(any(), any(), any(), any()))
+        .thenReturn(new CompositionResult.NoInput());
 
-    final var assistantMessageText = "This is the assistant message";
-    final var assistantMessage = assistantMessage(assistantMessageText);
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+    assertThat(response.variables()).isEmpty();
+    assertThat(response.completionConditionFulfilled()).isFalse();
+    assertThat(response.cancelRemainingInstances()).isFalse();
+
+    verifyNoInteractions(framework);
+  }
+
+  @Test
+  void shouldEmitOnlyThinkingPatchSynchronouslyAndDeferMetricsPatchOnToolCallTurn() {
+    // given: LLM returns tool calls → intermediate turn → element instance stays alive after
+    // completionConditionFulfilled=false → deferred PATCH is safe
+    mockSystemPrompt();
+    mockProceed(USER_MESSAGE);
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
+    final var assistantMessage = AssistantMessage.builder().toolCalls(TOOL_CALLS).build();
     mockFrameworkExecution(assistantMessage);
+    mockResponseHandler();
 
-    when(gatewayToolHandlers.transformToolCalls(any(AgentContext.class), anyList()))
-        .thenAnswer(i -> i.getArgument(1));
+    // when
+    final var response = requestHandler.handleRequest(agentExecutionContext);
 
-    requestHandler.handleRequest(agentExecutionContext);
-
-    return runtimeMemoryCaptor.getValue();
-  }
-
-  static Stream<MemoryConfiguration> memoryConfigurationsWithoutMaxMessages() {
-    return Stream.of(
-        null, new MemoryConfiguration(new InProcessMemoryStorageConfiguration(), null));
-  }
-
-  private void mockSystemPrompt(SystemPromptConfiguration systemPromptConfiguration) {
-    when(agentExecutionContext.systemPrompt()).thenReturn(systemPromptConfiguration);
-    doAnswer(
-            i -> {
-              final var runtimeMemory = i.getArgument(2, RuntimeMemory.class);
-              runtimeMemory.addMessage(systemMessage(systemPromptConfiguration.prompt()));
-              return null;
-            })
-        .when(messagesHandler)
-        .addSystemMessage(
+    // then: only THINKING patch is synchronous; metrics PATCH is NOT sent yet
+    verify(agentInstanceClient)
+        .update(
             eq(agentExecutionContext),
-            any(AgentContext.class),
-            any(RuntimeMemory.class),
-            eq(systemPromptConfiguration));
-  }
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .status(AgentInstanceUpdateStatus.THINKING)
+                    .tools(TOOL_DEFINITIONS)
+                    .build()));
+    verifyHistoryItemsCreated(assistantMessage);
+    verifyNoMoreInteractions(agentInstanceClient);
 
-  private void mockUserPrompt(
-      UserPromptConfiguration userPromptConfiguration, List<ToolCallResult> toolCallResults) {
-    when(agentExecutionContext.userPrompt()).thenReturn(userPromptConfiguration);
-    doAnswer(
-            i -> {
-              final var userMessage = userMessage(userPromptConfiguration.prompt());
-              final var runtimeMemory = i.getArgument(2, RuntimeMemory.class);
-              runtimeMemory.addMessage(userMessage);
-              return List.of(userMessage);
-            })
-        .when(messagesHandler)
-        .addUserMessages(
+    // when: job completes — deferred metrics PATCH fires now
+    response.onJobCompleted();
+    verify(agentInstanceClient)
+        .update(
             eq(agentExecutionContext),
-            any(AgentContext.class),
-            any(RuntimeMemory.class),
-            eq(userPromptConfiguration),
-            eq(toolCallResults));
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .status(AgentInstanceUpdateStatus.TOOL_CALLING)
+                    .delta(new AgentMetrics(1, new TokenUsage(10, 20), 2))
+                    .build()));
+    verifyNoMoreInteractions(agentInstanceClient);
   }
 
-  private void mockInterruptedToolCall(List<ToolCallResult> toolCallResults) {
-    doAnswer(
-            i -> {
-              final var toolCallMessage =
-                  toolCallResultMessage(
-                      toolCallResults.stream()
-                          .map(tc -> ToolCallResult.forCancelledToolCall(tc.id(), tc.name()))
-                          .toList());
-              final var runtimeMemory = i.getArgument(2, RuntimeMemory.class);
-              runtimeMemory.addMessage(toolCallMessage);
-              return List.of(toolCallMessage);
-            })
-        .when(messagesHandler)
-        .addUserMessages(
+  @Test
+  void shouldEmitThinkingAndMetricsPatchSynchronouslyOnFinalTurn() {
+    // given: LLM returns no tool calls → final turn → AHSP closes
+    // (completionConditionFulfilled=true)
+    // → element instance dies after job completion → synchronous PATCH required
+    mockSystemPrompt();
+    mockProceed(USER_MESSAGE);
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
+    final var assistantMessage = AssistantMessage.builder().build();
+    mockFrameworkExecution(assistantMessage);
+    mockResponseHandler();
+
+    // when
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+
+    // then: THINKING + IDLE metrics PATCH both synchronous
+    verify(agentInstanceClient)
+        .update(
             eq(agentExecutionContext),
-            any(AgentContext.class),
-            any(RuntimeMemory.class),
-            any(UserPromptConfiguration.class),
-            anyList());
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .status(AgentInstanceUpdateStatus.THINKING)
+                    .tools(TOOL_DEFINITIONS)
+                    .build()));
+    verify(agentInstanceClient)
+        .update(
+            eq(agentExecutionContext),
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .status(AgentInstanceUpdateStatus.IDLE)
+                    .delta(new AgentMetrics(1, new TokenUsage(10, 20), 0))
+                    .build()));
+    verifyHistoryItemsCreated(assistantMessage);
+    verifyNoMoreInteractions(agentInstanceClient);
+
+    // when: job completes — no deferred PATCH (was already sent synchronously)
+    response.onJobCompleted();
+    verifyNoMoreInteractions(agentInstanceClient);
   }
 
-  private void mockFrameworkExecution(AssistantMessage assistantMessage) {
-    when(framework.executeChatRequest(
-            eq(agentExecutionContext), any(AgentContext.class), runtimeMemoryCaptor.capture()))
+  @Test
+  void shouldReportMetricsWithoutToolCallsWhenJobCompletionFails() {
+    // given: LLM returns tool calls → deferred path
+    mockSystemPrompt();
+    mockProceed(USER_MESSAGE);
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
+    final var assistantMessage = AssistantMessage.builder().toolCalls(TOOL_CALLS).build();
+    mockFrameworkExecution(assistantMessage);
+    mockResponseHandler();
+
+    // when
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+
+    // only THINKING was synchronous
+    verify(agentInstanceClient)
+        .update(
+            eq(agentExecutionContext),
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .status(AgentInstanceUpdateStatus.THINKING)
+                    .tools(TOOL_DEFINITIONS)
+                    .build()));
+    verifyHistoryItemsCreated(assistantMessage);
+    verifyNoMoreInteractions(agentInstanceClient);
+
+    // when: job completion fails (execution error)
+    // toolCalls are stripped to avoid inflating the counter for unactivated elements
+    response.onJobCompletionFailed(
+        new JobCompletionFailure.ExecutionFailed(new RuntimeException(), null));
+
+    verify(agentInstanceClient)
+        .update(
+            eq(agentExecutionContext),
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .status(AgentInstanceUpdateStatus.IDLE)
+                    .delta(new AgentMetrics(1, new TokenUsage(10, 20), 0))
+                    .build()));
+    verifyNoMoreInteractions(agentInstanceClient);
+  }
+
+  @Test
+  void shouldReportMetricsWithoutToolCallsWhenJobSuperseded() {
+    // given: LLM returns tool calls → deferred path
+    mockSystemPrompt();
+    mockProceed(USER_MESSAGE);
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
+    final var assistantMessage = AssistantMessage.builder().toolCalls(TOOL_CALLS).build();
+    mockFrameworkExecution(assistantMessage);
+    mockResponseHandler();
+
+    // when
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+
+    // only THINKING was synchronous
+    verify(agentInstanceClient)
+        .update(
+            eq(agentExecutionContext),
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .status(AgentInstanceUpdateStatus.THINKING)
+                    .tools(TOOL_DEFINITIONS)
+                    .build()));
+    verifyHistoryItemsCreated(assistantMessage);
+    verifyNoMoreInteractions(agentInstanceClient);
+
+    // when: job superseded (NOT_FOUND) — deferred listener fires, strips toolCalls, no status
+    // change
+    response.onJobCompletionFailed(
+        new JobCompletionFailure.CommandFailure.CommandIgnored(new RuntimeException()));
+
+    verify(agentInstanceClient)
+        .update(
+            eq(agentExecutionContext),
+            any(),
+            eq(
+                AgentInstanceUpdateRequest.builder()
+                    .delta(new AgentMetrics(1, new TokenUsage(10, 20), 0))
+                    .build()));
+    verifyNoMoreInteractions(agentInstanceClient);
+  }
+
+  @Test
+  void blankSystemPrompt_omitsSystemMessageFromConversation() {
+    // a blank composed system prompt must not be sent to the LLM nor persisted as a message
+    when(systemPromptComposer.compose(any(), any())).thenReturn("   ");
+    mockProceed(USER_MESSAGE);
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new ReadyToConverse(INITIAL_AGENT_CONTEXT, List.of()));
+    final var assistantMessage = assistantMessage("hi");
+    mockFrameworkExecution(assistantMessage);
+    mockResponseHandler();
+
+    final var response = requestHandler.handleRequest(agentExecutionContext);
+
+    final var agentResponse = response.responseValue();
+    assertThat(agentResponse).isNotNull();
+    assertThat(agentResponse.context().conversation())
+        .isInstanceOfSatisfying(
+            InProcessConversationContext.class,
+            c -> assertThat(c.messages()).containsExactly(USER_MESSAGE, assistantMessage));
+    // no system message is sent to the LLM either
+    assertThat(snapshotCaptor.getValue().messages()).containsExactly(USER_MESSAGE);
+  }
+
+  @Test
+  void throwsWhenModelCallLimitReachedAfterRehydration() {
+    // a multi-turn conversation rehydrated from history: reconstructed turns carry empty metrics,
+    // so the limit must be enforced against the durable cumulative counter on the agent context.
+    mockSystemPrompt();
+    mockProceed(USER_MESSAGE);
+    when(agentExecutionContext.configuration())
+        .thenReturn(
+            new AgentConfiguration(
+                null,
+                null,
+                new UserPromptConfiguration("user input", List.of()),
+                null,
+                new LimitsConfiguration(2),
+                null,
+                null));
+
+    final var contextAtLimit =
+        AgentContext.builder()
+            .state(AgentState.READY)
+            .toolDefinitions(TOOL_DEFINITIONS)
+            .metrics(new AgentMetrics(2, TokenUsage.empty(), 0))
+            .build();
+    when(agentInitializer.initializeAgent(agentExecutionContext))
+        .thenReturn(new ReadyToConverse(contextAtLimit, List.of()));
+
+    assertThatThrownBy(() -> requestHandler.handleRequest(agentExecutionContext))
+        .isInstanceOfSatisfying(
+            ConnectorException.class,
+            e ->
+                assertThat(e.getErrorCode())
+                    .isEqualTo(AgentErrorCodes.ERROR_CODE_MAXIMUM_NUMBER_OF_MODEL_CALLS_REACHED));
+
+    // limit is checked before the LLM call — no chat request is issued
+    verifyNoInteractions(framework);
+  }
+
+  private void mockSystemPrompt() {
+    when(systemPromptComposer.compose(any(), any())).thenReturn(SYSTEM_PROMPT);
+  }
+
+  private void mockProceed(Message... inputMessages) {
+    when(agentInputComposer.compose(any(), any(), any(), any()))
+        .thenReturn(new CompositionResult.NextTurn(List.of(inputMessages)));
+  }
+
+  private void mockResponseHandler() {
+    when(responseHandler.createResponse(any(AgentConversation.class)))
         .thenAnswer(
             i -> {
-              final var agentContext = i.getArgument(1, AgentContext.class);
-              return new TestFrameworkChatResponse(
-                  agentContext.withMetrics(
-                      agentContext
-                          .metrics()
-                          .incrementModelCalls(1)
-                          .incrementTokenUsage(new TokenUsage(10, 20))),
-                  assistantMessage,
-                  Map.of("message", assistantMessage.content()));
+              final var conversation = i.getArgument(0, AgentConversation.class);
+              final var assistantMessage = conversation.lastTurn().orElseThrow().assistantMessage();
+              final var toolCalls =
+                  assistantMessage.toolCalls() == null
+                      ? List.<ToolCallProcessVariable>of()
+                      : assistantMessage.toolCalls().stream()
+                          .map(ToolCallProcessVariable::from)
+                          .toList();
+              return AgentResponse.builder()
+                  .context(conversation.toAgentContext())
+                  .responseMessage(assistantMessage)
+                  .responseText(assistantMessage.hasToolCalls() ? null : textOf(assistantMessage))
+                  .toolCalls(toolCalls)
+                  .build();
             });
   }
 
+  private static String textOf(AssistantMessage assistantMessage) {
+    if (assistantMessage.content() == null) {
+      return null;
+    }
+    return assistantMessage.content().stream()
+        .filter(TextContent.class::isInstance)
+        .map(c -> ((TextContent) c).text())
+        .findFirst()
+        .orElse(null);
+  }
+
+  private void verifyHistoryItemsCreated(AssistantMessage expectedAssistantMessage) {
+    verify(agentInstanceClient)
+        .createHistoryForInputMessages(eq(agentExecutionContext), any(), turnCaptor.capture());
+    assertThat(turnCaptor.getValue().inputMessages()).containsExactly(USER_MESSAGE);
+
+    verify(agentInstanceClient)
+        .createHistoryForAssistantMessage(eq(agentExecutionContext), any(), turnCaptor.capture());
+    assertThat(turnCaptor.getValue().assistantMessage()).isEqualTo(expectedAssistantMessage);
+  }
+
+  private void mockFrameworkExecution(AssistantMessage assistantMessage) {
+    final var metrics =
+        new AgentMetrics(
+            1,
+            new TokenUsage(10, 20),
+            assistantMessage.toolCalls() == null ? 0 : assistantMessage.toolCalls().size(),
+            EXECUTION_TIME);
+    doReturn(
+            new TestFrameworkChatResponse(
+                assistantMessage, metrics, Map.of("message", assistantMessage)))
+        .when(framework)
+        .executeMeasuringTime(eq(agentExecutionContext), snapshotCaptor.capture());
+  }
+
   private record TestFrameworkChatResponse(
-      AgentContext agentContext,
-      AssistantMessage assistantMessage,
-      Map<String, Object> rawChatResponse)
-      implements AiFrameworkChatResponse<Map<String, Object>> {}
+      AssistantMessage assistantMessage, AgentMetrics metrics, Map<String, Object> rawChatResponse)
+      implements AiFrameworkChatResponse<Map<String, Object>> {
+    @Override
+    public TestFrameworkChatResponse withExecutionTimeMetrics(Duration executionTime) {
+      return new TestFrameworkChatResponse(
+          assistantMessage, metrics.withExecutionTime(executionTime), rawChatResponse);
+    }
+  }
 }
